# ROS2

./: README.md  my_world.world
arduinoboot_ws/install/: local_setup.sh  setup.sh
arduinoboot_ws/src/ardniobot_remote/: CMakeLists.txt  package.xml
arduinoboot_ws/src/ardniobot_remote/ardniobot_remote/: alexa_interface.py
arduinoboot_ws/src/ardniobot_remote/src/: task_server.cpp
arduinoboot_ws/src/arduinoboot_py_examples/: setup.cfg  setup.py
arduinoboot_ws/src/ardunio_cpp_examples/: CMakeLists.txt  package.xml
arduinoboot_ws/src/ardunio_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp
arduinoboot_ws/src/arduniobot_bringup/: CMakeLists.txt
arduinoboot_ws/src/arduniobot_controller/: CMakeLists.txt  arduniobot_controller.xml
arduinoboot_ws/src/arduniobot_controller/launch/: controller.launch.py
arduinoboot_ws/src/arduniobot_controller/src/: arduniobot_interface.cpp
arduinoboot_ws/src/arduniobot_description/: CMakeLists.txt  package.xml
arduinoboot_ws/src/arduniobot_description/rviz/: display.rviz
arduinoboot_ws/src/arduniobot_description/urdf/: arduniobot.urdf.xacro  arduniobot_gazebo.xacro
arduinoboot_ws/src/arduniobot_firmware/: CMakeLists.txt
arduinoboot_ws/src/arduniobot_movelt/: CMakeLists.txt  package.xml
arduinoboot_ws/src/arduniobot_movelt/config/: arduniobot.srdf  initial_positions.yaml  joint_limits.yaml  kinematic.yaml  pliz_cartesian_limits.yaml
arduinoboot_ws/src/arduniobot_movelt/launch/: moveit.launch.py
arduinoboot_ws/src/arduniobot_msgs/: CMakeLists.txt
arduinoboot_ws/src/ardunioboty_utils/: CMakeLists.txt  package.xml
arduinoboot_ws/src/ardunioboty_utils/src/: angle_conversion.cpp
arduinoboot_ws/src/install/: local_setup.sh  setup.sh
robot/arduniobot_description/: CMakeLists.txt
robot/arduniobot_description/urdf/: arduniobot.urdf.xacro
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_cpp_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_no_opp.cpp  add_two_ints_server.cpp  hw_status_publisher.cpp  my_first_node.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp  turtle_catch.cpp
ros2_ws/src/my_py_pkg/: hw_status_publisher.py  package.xml  setup.py
ros2_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_bringup/launch/: catch_them_all.launch.py  number_app.launch.py
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/turtle_catch/: CMakeLists.txt  package.xml
ros2_ws/src/turtlesim_catch_them_all/: package.xml
ros2_ws/turtle_catch_them_all/: CMakeLists.txt
ros2_ws1/install/: local_setup.sh  setup.sh
ros2_ws1/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws1/src/my_robot_description/: CMakeLists.txt
ros2_ws2/: CMakeLists.txt
ros2_ws2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws2/src/actions_py/: setup.py
ros2_ws2/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws2/src/lifecycle_cpp/: CMakeLists.txt
ros2_ws2/src/my_robot_interfaces/: CMakeLists.txt
turtle_catch_them_all/: package.xml
turtle_catch_them_all/src/: turtle_controller.py
(+248 files in other folders)
